--- a/Branches-Index.html
+++ b/Branches-Index.html
@@ -18,13 +18,13 @@
           <span class="material-icons-outlined">menu</span>
         </div>  
         <div class="header-right">
-          <a href="C:\Users\user\Desktop\department website\Feed Page\index-main.html">
+          <a href="index-main.html">
           <span class="material-icons-outlined">newspaper</span>
           </a>
           <a href="mailto:Malikscrm@maliks.com">
             <span class="material-icons-outlined">email</span>
         </a>
-        <a href="C:\Users\user\Desktop\department website\Log in page\Index-Login.html">
+        <a href="index.html">
           <span class="material-icons-outlined">account_circle</span>
         </a>
         </div>
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li class="sidebar-list-item">
-            <a href="C:/Users/user/Desktop/department website/Forms/Forms.html" target="_blank">
+            <a href="Forms.html" target="_blank">
               <span class="material-icons-outlined">fact_check</span> Forms
             </a>
           </li>
